# udemos

./: #main.cpp#  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
demo/Routes/: GetLongResponseRouteHandler.cpp  GetLongResponseRouteHandler.hpp  GetRouteHandler.cpp
demo/Routes/Secrets/: GetSecretRouteHandler.cpp  GetSecretRouteHandler.hpp
demo/Routes/Secrets/Models/: SecretMessage.hpp
demo/Routes/SimpleSecrets/: GetSimpleSecretRouteHandler.cpp  GetSimpleSecretRouteHandler.hpp
demo/Routes/SimpleSecrets/Models/: SimpleSecretMessage.hpp
new/keys/: private_key.pem
new/udemos/: main.cpp
new/udemos/demo/Routes/: GetRouteHandler.cpp  GetRouteHandler.hpp  GetSecretRouteHandler.cpp  GetSecretRouteHandler.hpp
new/udemos/src/Arhitecture/: RouteHandler.hpp  RouteHandlerFactory.hpp
new/udemos/src/Core/Common/: CFunctional.h
new/udemos/src/Core/Config/: Configuration.cpp  Configuration.hpp
new/udemos/src/Core/CoreThread/: ThreadWrapper.hpp
new/udemos/src/Core/EventHandler/: Event.h  EventLoop.cpp  EventLoop.h  EventQueue.cpp  EventQueue.h
new/udemos/src/Core/Logger/: Logger.cpp  Logger.hpp
new/udemos/src/Core/ThreadPool/: ThreadPool.hpp
new/udemos/src/Core/Utils/: ErrorUtils.cpp  ErrorUtils.hpp  TestUtils.h  TimeUtils.hpp
new/udemos/src/Crypto/: AESCipher.cpp  AESCipher.hpp  AESCryptoDefines.h  AESUtil.h
new/udemos/src/Networking/: AddressResolver.cpp  AddressResolver.hpp  Connection.cpp  Connection.hpp  Socket.cpp  Socket.hpp
new/udemos/src/Protocol/: HttpProtocolHandler.cpp  HttpProtocolHandler.h  ProtocolHandler.h
new/udemos/src/Protocol/Data/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.hpp
new/udemos/src/Protocol/HttpModels/: HttpMethod.cpp  HttpRequest.cpp  HttpRequest.hpp
new/udemos/src/Route/: RouteHandlerFactory.hpp
new/udemos/src/Routes/: GetRouteHandler.cpp
new/udemos/src/Services/: BaseService.cpp  BaseService.hpp  HttpService.cpp  HttpService.hpp  ServiceFactory.cpp  ServiceFactory.hpp
new/udemos/tests/: ConfigurationTests.cpp  EventHandlingTests.cpp  FileUtilsTests.cpp  HttpRequestTests.cpp  HttpResponseTests.cpp  LoggerTests.cpp  MemoryPoolTests.cpp  NetworkingTests.cpp  ServiceFactoryTests.cpp  StringUtilsTests.cpp  ThreadCoreTests.cpp  TimeUtilsTests.cpp
new/udemos/udemos/: main.cpp
new/udemos/udemos.xcodeproj/: project.pbxproj
new/udemos/udemos.xcodeproj/xcshareddata/xcschemes/: udemos.xcscheme
new/udemos/udemos/demo/Routes/: GetRouteHandler.hpp
new/udemos/udemos/src/Networking/: Connection.cpp  Connection.hpp  ConnectionPool.cpp  Socket.cpp  Socket.hpp
src/API/Home/: HomeController.hpp  HomeView.hpp
src/Acceptor/: HttpAcceptor.hpp
src/Connection/: HttpClientConnection.hpp  HttpsClientConnection.hpp
src/Core/Common/CodableAndDecodable/: CodableAndDecodable.hpp
src/Core/Common/MessageQueue/: MessageQueue.hpp  MessageStruct.hpp
src/Core/Common/ThreadManager/: ThreadManager.hpp
src/Core/Common/VIPER/: EntityBase.h  InteractorBase.h  ViperIncludes.h
src/Core/CoreMemory/: MemoryPool.cpp
src/Core/CoreThread/: MutexLock.hpp
src/Core/ThreadPool/: ThreadPool.hpp
src/Core/Utils/: FileUtils.hpp  TimeUtils.cpp
src/Crypto/: AESCipher.cpp  AESCipher.hpp  AESUtil.h
src/Defines/: HttpDefines.h
src/Logger/: HttpLogType.hpp  HttpLogger.cpp  HttpLogger.h  HttpLoggerMediator.cpp  HttpLoggerMediator.h
src/Logger/Logs/: HttpLogCommon.hpp
src/Networking/: AddressResolver.cpp  AddressResolver.hpp  ConnectionPool.hpp
src/Protocol/: HttpProtocolHandler.cpp  HttpProtocolHandler.h  ProtocolHandler.h
src/Protocol/HttpModels/: HttpMethod.hpp  HttpResponse.hpp  HttpResponseUtils.hpp
src/Route/: RouteHandler.cpp  RouteHandler.hpp  RouteMatcher.hpp
src/Server/: HttpServer.hpp
src/Services/: HttpService.cpp
src/api/home/: home_controller.hpp  home_view.hpp  home_view_static_index_html.hpp
src/api/home/models/: person.hpp
src/api2/: HelloWorldRoute.cpp  HelloWorldRoute.hpp
src/logos/tokens/: ud_token_types.hpp
src/security/: encrypt_aes.hpp
src/server/: udAcceptor.cpp  udAcceptor.hpp  udConnection.cpp  udConnection.hpp  udHttpRequest.hpp  udHttpResponse.hpp  udRoute.cpp  udRoute.hpp  udRouter.cpp  udRouter.hpp  udThreadPool.hpp
src/server/reactive/: udFlux.hpp
src/ud_server/: ud_http.hpp  ud_rpc.hpp  ud_server.hpp  ud_service.hpp  ud_service_factory.hpp
src/ud_server/acceptor/: ud_acceptor_data.hpp  ud_acceptor_util.hpp  ud_blacklist_manager.hpp  ud_http_acceptor.hpp
src/ud_server/balancer/: ud_server_balancer.hpp
src/ud_server/common/: ud_http_defines.h  ud_http_thread_pool.hpp  ud_http_time.hpp  ud_result.hpp  ud_result_failure.hpp  ud_result_success.hpp  ud_thread_manager.hpp  udp_http_defines.h
src/ud_server/common/result/: ud_common_result.hpp
src/ud_server/common/ud_message_queue/: ud_c_message_consumer.hpp  ud_c_message_producer.hpp  ud_c_message_queue.hpp  ud_c_message_struct.hpp
src/ud_server/connection/: ud_http_connection.hpp  ud_http_connection_data.hpp  ud_http_connection_util.hpp  udp_https_connection.hpp
src/ud_server/controller/: ud_http_controller.hpp
src/ud_server/logger/: ud_logger.cpp  ud_logger.h  ud_logger_mediator.cpp  ud_logger_mediator.h  ud_logger_type.hpp
src/ud_server/logger/logs/: HttpLogCommon.hpp
src/ud_server/models/request/: ud_http_request.hpp
src/ud_server/models/response/: ud_http_response.hpp  ud_http_response_generator_factory.hpp  ud_i_http_response_generator.h  ud_map_http_response_generator.hpp
src/ud_server/router/: ud_http_route.hpp  ud_http_router.hpp
src/ud_server/server/: ud_http_server.hpp  ud_server_data.hpp  ud_server_utils.hpp
src/ud_server/service_factories/: ud_http_service_factory.hpp  ud_https_service_factory.hpp
src/ud_server/services/: ud_http_service.hpp  ud_http_service_builder.hpp  ud_https_service.hpp  ud_https_service_builder.hpp  ud_service_builder.hpp
src/ud_server/socket/: ud_http_socket.hpp  ud_socket.hpp  ud_socket_wrapper.hpp
src/ud_server/view/: ud_http_view.hpp
tests/: test_main.cpp
tests/src/: HttpServerTest.hpp
(+30 files in other folders)
